Frankbelford/uatv1ba/force-app/main/default/objects/Activity/fields/Follow_up_date__c.field-meta.xml
<CustomField>
    <fullName>Follow_up_date__c</fullName>
    <inlineHelpText>This will create the next task automatically based on the follow up date when the current task is completed.</inlineHelpText>
    <label>Follow up date</label>
    <type>Date</type>
</CustomField>