Frankbelford/uatv1ba/force-app/main/default/objects/Activity/fields/Interview__c.field-meta.xml
<CustomField>
    <fullName>Interview__c</fullName>
    <label>Interview Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>IP_EventType__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Successful</fullName>
            </value>
            <value>
                <fullName>Unsuccessful</fullName>
            </value>
            <value>
                <fullName>No Show</fullName>
            </value>
            <value>
                <fullName>Cancelled By Candidate</fullName>
            </value>
            <value>
                <fullName>Rejected By Client</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>