Frankbelford/uatv1ba/force-app/main/default/objects/Activity/fields/IP_Accountumber__c.field-meta.xml
<CustomField>
    <fullName>IP_Accountumber__c</fullName>
    <label>Account Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>