Frankbelford/uatv1ba/force-app/main/default/objects/Activity/fields/IP_ActivityType__c.field-meta.xml
<CustomField>
    <fullName>IP_ActivityType__c</fullName>
    <inlineHelpText>select type of activity being recorded</inlineHelpText>
    <label>Activity Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Visit</fullName>
            </value>
            <value>
                <fullName>Registration</fullName>
            </value>
            <value>
                <fullName>General Call</fullName>
            </value>
            <value>
                <fullName>Send Email</fullName>
            </value>
            <value>
                <fullName>Send Contract</fullName>
            </value>
            <value>
                <fullName>Left Message</fullName>
            </value>
            <value>
                <fullName>Network</fullName>
            </value>
            <value>
                <fullName>Check-In</fullName>
            </value>
            <value>
                <fullName>Sales Call</fullName>
            </value>
            <value>
                <fullName>Spec Call</fullName>
            </value>
            <value>
                <fullName>Data Migration</fullName>
            </value>
            <value>
                <fullName>Feedback</fullName>
            </value>
            <value>
                <fullName>T-P / Perm</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>