Frankbelford/uatv1ba/force-app/main/default/objects/Activity/fields/IP_AgeofQuery__c.field-meta.xml
<CustomField>
    <fullName>IP_AgeofQuery__c</fullName>
    <label>Age of Query</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>