Frankbelford/uatv1ba/force-app/main/default/objects/Activity/fields/IP_BranchCostCode__c.field-meta.xml
<CustomField>
    <fullName>IP_BranchCostCode__c</fullName>
    <label>Branch Cost Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>