Frankbelford/uatv1ba/force-app/main/default/objects/Activity/fields/IP_BranchName__c.field-meta.xml
<CustomField>
    <fullName>IP_BranchName__c</fullName>
    <label>Branch Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>