Frankbelford/uatv1ba/force-app/main/default/objects/Activity/fields/IP_CandidateCallTypes__c.field-meta.xml
<CustomField>
    <fullName>IP_CandidateCallTypes__c</fullName>
    <description>types of calls logged against a candidate record</description>
    <label>Candidate Call Types</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>General Call</fullName>
            </value>
            <value>
                <fullName>Left Message</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>