Frankbelford/uatv1ba/force-app/main/default/objects/Activity/fields/IP_EventType__c.field-meta.xml
<CustomField>
    <fullName>IP_EventType__c</fullName>
    <defaultValue>&apos;General Call&apos;</defaultValue>
    <inlineHelpText>select type of activity being recorded</inlineHelpText>
    <label>Event Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Visit</fullName>
            </value>
            <value>
                <fullName>Registration</fullName>
            </value>
            <value>
                <fullName>Interview</fullName>
            </value>
            <value>
                <fullName>Check-In</fullName>
                <isActive>false</isActive>
                <label>Check-In</label>
            </value>
            <value>
                <fullName>Data Migration</fullName>
                <isActive>false</isActive>
                <label>Data Migration</label>
            </value>
            <value>
                <fullName>Feedback</fullName>
                <isActive>false</isActive>
                <label>Feedback</label>
            </value>
            <value>
                <fullName>General Call</fullName>
                <isActive>false</isActive>
                <label>General Call</label>
            </value>
            <value>
                <fullName>Left Message</fullName>
                <isActive>false</isActive>
                <label>Left Message</label>
            </value>
            <value>
                <fullName>Network</fullName>
                <isActive>false</isActive>
                <label>Network</label>
            </value>
            <value>
                <fullName>Sales Call</fullName>
                <isActive>false</isActive>
                <label>Sales Call</label>
            </value>
            <value>
                <fullName>Send Contract</fullName>
                <isActive>false</isActive>
                <label>Send Contract</label>
            </value>
            <value>
                <fullName>Send Email</fullName>
                <isActive>false</isActive>
                <label>Send Email</label>
            </value>
            <value>
                <fullName>Spec Call</fullName>
                <isActive>false</isActive>
                <label>Spec Call</label>
            </value>
            <value>
                <fullName>T-P / Perm</fullName>
                <isActive>false</isActive>
                <label>T-P / Perm</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>