Frankbelford/uatv1ba/force-app/main/default/objects/Activity/fields/IP_Invoice_Date__c.field-meta.xml
<CustomField>
    <fullName>IP_Invoice_Date__c</fullName>
    <label>Invoice Date</label>
    <type>Date</type>
</CustomField>