Frankbelford/uatv1ba/force-app/main/default/objects/Activity/fields/IP_QueryDescription__c.field-meta.xml
<CustomField>
    <fullName>IP_QueryDescription__c</fullName>
    <label>Query Description</label>
    <type>TextArea</type>
</CustomField>