Frankbelford/uatv1ba/force-app/main/default/objects/Activity/fields/IP_QueryValue__c.field-meta.xml
<CustomField>
    <fullName>IP_QueryValue__c</fullName>
    <label>Query Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>