Frankbelford/uatv1ba/force-app/main/default/objects/Activity/fields/IP_TaskType__c.field-meta.xml
<CustomField>
    <fullName>IP_TaskType__c</fullName>
    <label>Task Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sales Call</fullName>
            </value>
            <value>
                <fullName>Spec Call</fullName>
            </value>
            <value>
                <fullName>General Call</fullName>
            </value>
            <value>
                <fullName>General Task</fullName>
            </value>
            <value>
                <fullName>Left Message</fullName>
            </value>
            <value>
                <fullName>Sales Visit</fullName>
            </value>
            <value>
                <fullName>Service Visit</fullName>
            </value>
            <value>
                <fullName>Feedback</fullName>
            </value>
            <value>
                <fullName>T-P / Perm</fullName>
            </value>
            <value>
                <fullName>Mailer/E-marketing</fullName>
            </value>
            <value>
                <fullName>Competitor Check-In</fullName>
            </value>
            <value>
                <fullName>Applicant Mailer</fullName>
            </value>
            <value>
                <fullName>Client Drop In</fullName>
            </value>
            <value>
                <fullName>Invoice Query</fullName>
            </value>
            <value>
                <fullName>Enhanced Vetting</fullName>
            </value>
            <value>
                <fullName>COB Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>