Frankbelford/uatv1ba/force-app/main/default/objects/Activity/fields/jsmassmail__EmailRequest__c.field-meta.xml
<CustomField>
    <fullName>jsmassmail__EmailRequest__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Email Request</label>
    <referenceTo>jsmassmail__Email_Request__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>