Frankbelford/uatv1ba/force-app/main/default/objects/Activity/fields/jsmassmail__On_Behalf_Of__c.field-meta.xml
<CustomField>
    <fullName>jsmassmail__On_Behalf_Of__c</fullName>
    <label>On Behalf Of</label>
    <length>150</length>
    <type>Text</type>
</CustomField>