Frankbelford/uatv1ba/force-app/main/default/objects/Activity/fields/LegacyID__c.field-meta.xml
<CustomField>
    <fullName>LegacyID__c</fullName>
    <externalId>true</externalId>
    <label>LegacyID</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>