Frankbelford/uatv1ba/force-app/main/default/objects/Activity/fields/m5__Call_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>m5__Call_Start_Time__c</fullName>
    <description>Time the call started for this user.</description>
    <label>Call Start Time</label>
    <type>DateTime</type>
</CustomField>