Frankbelford/uatv1ba/force-app/main/default/objects/Activity/fields/m5__CallerID__c.field-meta.xml
<CustomField>
    <fullName>m5__CallerID__c</fullName>
    <description>CallerID of the caller</description>
    <inlineHelpText>If the calling number is not blocked, the calling number is displayed on the handset or base station of the called party. It will be captured in this field.</inlineHelpText>
    <label>CallerID</label>
    <type>Phone</type>
</CustomField>