Frankbelford/uatv1ba/force-app/main/default/objects/Activity/fields/m5__CNAM__c.field-meta.xml
<CustomField>
    <fullName>m5__CNAM__c</fullName>
    <description>CNAM of the caller.</description>
    <inlineHelpText>(Calling NAMe):  This is similar to caller ID except that the calling party&apos;s name is displayed along with the calling number or instead of the calling number.</inlineHelpText>
    <label>CNAM</label>
    <length>128</length>
    <type>Text</type>
</CustomField>