Frankbelford/uatv1ba/force-app/main/default/objects/Activity/fields/m5__Number_Dialed__c.field-meta.xml
<CustomField>
    <fullName>m5__Number_Dialed__c</fullName>
    <description>The telephone number dialed.</description>
    <label>Number Dialed</label>
    <type>Phone</type>
</CustomField>