Frankbelford/uatv1ba/force-app/main/default/objects/Activity/fields/m5__of_activities__c.field-meta.xml
<CustomField>
    <fullName>m5__of_activities__c</fullName>
    <description>Constant set equal to 1, for reporting needs only.</description>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label># of Activities</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>