Frankbelford/uatv1ba/force-app/main/default/objects/Activity/fields/m5__Summary__c.field-meta.xml
<CustomField>
    <fullName>m5__Summary__c</fullName>
    <label>Summary</label>
    <length>254</length>
    <type>Text</type>
</CustomField>