Frankbelford/uatv1ba/force-app/main/default/objects/Activity/fields/m5__TN__c.field-meta.xml
<CustomField>
    <fullName>m5__TN__c</fullName>
    <description>The M5 phone number that made or received this call.</description>
    <label>M5 Telephone Number</label>
    <type>Phone</type>
</CustomField>