Frankbelford/uatv1ba/force-app/main/default/objects/Activity/fields/No_Future_Task__c.field-meta.xml
<CustomField>
    <fullName>No_Future_Task__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No Future Task</label>
    <type>Checkbox</type>
</CustomField>