Frankbelford/uatv1ba/force-app/main/default/objects/Activity/fields/Outcome_Required__c.field-meta.xml
<CustomField>
    <fullName>Outcome_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Tick for tasks requiring outcome recorded</inlineHelpText>
    <label>Outcome Required</label>
    <type>Checkbox</type>
</CustomField>