Frankbelford/uatv1ba/force-app/main/default/objects/Activity/fields/Public_Calendar__c.field-meta.xml
<CustomField>
    <fullName>Public_Calendar__c</fullName>
    <formula>Owner:Calendar.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Public Calendar</label>
    <type>Text</type>
</CustomField>