Frankbelford/uatv1ba/force-app/main/default/objects/Activity/fields/RadialCA__Post_to_Chatter__c.field-meta.xml
<CustomField>
    <fullName>RadialCA__Post_to_Chatter__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag populated via workflow to post an activity to Chatter</description>
    <inlineHelpText>Should this entry be posted to Chatter feed of the parent record?</inlineHelpText>
    <label>Post to Chatter</label>
    <type>Checkbox</type>
</CustomField>