Frankbelford/uatv1ba/force-app/main/default/objects/Activity/fields/Task_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Task_Outcome__c</fullName>
    <label>Task Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Immediate Requirement</fullName>
            </value>
            <value>
                <fullName>Future Requirement</fullName>
            </value>
            <value>
                <fullName>No Current Requirement move to CDP</fullName>
            </value>
            <value>
                <fullName>None</fullName>
                <isActive>false</isActive>
                <label>None</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>