Frankbelford/uatv1ba/force-app/main/default/objects/Activity/fields/ts2__account__c.field-meta.xml
<CustomField>
    <fullName>ts2__account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>