Frankbelford/uatv1ba/force-app/main/default/objects/Activity/fields/ts2__Application__c.field-meta.xml
<CustomField>
    <fullName>ts2__Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application</label>
    <referenceTo>ts2__Application__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>