Frankbelford/uatv1ba/force-app/main/default/objects/Activity/fields/ts2__Client__c.field-meta.xml
<CustomField>
    <fullName>ts2__Client__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>