Frankbelford/uatv1ba/force-app/main/default/objects/Activity/fields/ts2__ExternalMessageId__c.field-meta.xml
<CustomField>
    <fullName>ts2__ExternalMessageId__c</fullName>
    <label>External Message Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>