Frankbelford/uatv1ba/force-app/main/default/objects/Activity/fields/ts2__IsFirstRecipient__c.field-meta.xml
<CustomField>
    <fullName>ts2__IsFirstRecipient__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is First Recipient</label>
    <type>Checkbox</type>
</CustomField>