Frankbelford/uatv1ba/force-app/main/default/objects/Activity/fields/ts2__Job__c.field-meta.xml
<CustomField>
    <fullName>ts2__Job__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Job Order</label>
    <referenceTo>ts2__Job__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>