Frankbelford/uatv1ba/force-app/main/default/objects/Activity/fields/ts2__RecipientAddress__c.field-meta.xml
<CustomField>
    <fullName>ts2__RecipientAddress__c</fullName>
    <label>Recipient Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>