Frankbelford/uatv1ba/force-app/main/default/objects/Activity/fields/ts2__RelatedObjects__c.field-meta.xml
<CustomField>
    <fullName>ts2__RelatedObjects__c</fullName>
    <label>Related Objects</label>
    <type>TextArea</type>
</CustomField>