Frankbelford/uatv1ba/force-app/main/default/objects/Activity/fields/ts2__Status__c.field-meta.xml
<CustomField>
    <fullName>ts2__Status__c</fullName>
    <description>Statuses for the Engagement Activity</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>accepted</fullName>
            </value>
            <value>
                <fullName>bounced</fullName>
            </value>
            <value>
                <fullName>clicked</fullName>
            </value>
            <value>
                <fullName>delivered</fullName>
            </value>
            <value>
                <fullName>opened</fullName>
            </value>
            <value>
                <fullName>sent</fullName>
            </value>
            <value>
                <fullName>unsubscribed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>