Frankbelford/uatv1ba/force-app/main/default/objects/Activity/fields/ts2extams__Substatus__c.field-meta.xml
<CustomField>
    <fullName>ts2extams__Substatus__c</fullName>
    <label>Substatus</label>
    <length>255</length>
    <type>Text</type>
</CustomField>